# examples

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
drivers/abb/: CMakeLists.txt  control_io.cpp  control_io.py  move.cpp  move.py  read_state.cpp  read_state.py  trajectory.cpp  trajectory.py
drivers/fanuc/: CMakeLists.txt  control_io.cpp  control_io.py  move.cpp  move.py  read_state.cpp  read_state.py  trajectory.cpp  trajectory.py
drivers/simulated/: CMakeLists.txt  control_io.cpp  control_io.py  move.cpp  move.py  read_state.cpp  read_state.py  trajectory.cpp  trajectory.py
drivers/universal/: CMakeLists.txt  control_io.cpp  control_io.py  move.cpp  move.py  read_state.cpp  read_state.py  trajectory.cpp  trajectory.py
drivers/yaskawa/: CMakeLists.txt  control_io.cpp  control_io.py  move.cpp  move.py  read_state.cpp  read_state.py  trajectory.cpp  trajectory.py
motion/: 01_quick_start_guide.cpp  01_quick_start_guide.py  02_real_time_motion.cpp  02_real_time_motion.py  03_motion_interface.cpp  03_motion_interface.py  04_robot_kinematics.cpp  04_robot_kinematics.py  05_along_waypoints.cpp  05_along_waypoints.py  06_plan_in_studio.cpp  06_plan_in_studio.py  07_dual_arm.cpp  07_dual_arm.py  08_linear_motion.cpp  08_linear_motion.py  09_path_following.cpp  09_path_following.py  CMakeLists.txt
projects/assembly/: README.md  application.py
projects/bimanual-depalletizing/: README.md  application.py
projects/bimanual-pick-and-place/: README.md  application.py
projects/bin-picking-with-vision/: README.md  application.py
projects/container-palletizing/: README.md  application.py
projects/inspection/: README.md  application.py
projects/lab-automation/: README.md  application.py
projects/mixed-case-depalletizing/: README.md  application.py  pattern_box1.yml  pattern_box2.yml
projects/palletizing/: README.md  application.py
vision/: 01_simulated_camera.py  02_realsense_driver.py  03_phoxi_driver.py  04_move_with_depth_map.py
